# Barkoder-desktop-pet

./: .gitignore  CLAUDE.md  README.md  RELEASE_NOTES.md  SECURITY.md  barkoder.spec  build_release.ps1  config.toml  pyproject.toml
assets/: metadata.json
docs/superpowers/plans/: 2026-06-21-barkoder.md
docs/superpowers/specs/: 2026-06-21-barkoder-design.md  behavior-tree-migration.md
src/barkoder/: __main__.py  animation.py  app.py  audio.py  behavior_tree.py  config.py  logging_setup.py  startup.py  state_machine.py  tracker.py  window.py
src/barkoder/behaviors/: arrival_sit.py  bark_walk.py  base.py  follow.py  idle.py  idle_sit.py  jump.py  pant.py  rest.py  run.py  walk.py  wander.py
src/barkoder/bt/: __init__.py  nodes.py
tests/: conftest.py  test_animation.py  test_audio.py  test_bt_nodes.py  test_config.py  test_startup.py  test_state_machine.py  test_tracker.py
tests/behaviors/: test_arrival_sit.py  test_bark_walk.py  test_follow.py  test_idle.py  test_idle_sit.py  test_jump.py  test_pant.py  test_rest.py  test_run.py  test_walk.py  test_wander.py
tools/: make_icon.py
